2011-03-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/menu-def.lisp: Menu update to prevent cursor keys clash.

	* clfswm.asd: Change compilation order to prevent undefined
	variables.

	* src/clfswm-internal.lisp (show-child(frame)): Handle properly
	the show-root-frame-p parameter.

2011-03-11  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (move-frame, resize-frame): Do not move or
	resize a frame when it's the current root.

2011-03-10  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Handle properly
	duplicated child in multipe frames.

2011-03-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/volume-mode.lisp (set-default-volume-keys): Add more
	keybindings (up/down, right/left) to raise/lower the volume.

	* src/clfswm-layout.lisp: Add a variable border size for frames
	and windows.

2011-03-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (cut-current-child, remove-current-child)
	(delete-current-child): Hide the current child before doing the
	action.

	* src/clfswm-internal.lisp (show-all-children): Hide windows not
	in the current root before displaying those in current root.
	Remove all hide-all unnecessary calls.

	* src/clfswm-configuration.lisp (save-variables-in-conf-file):
	Save only variables with a different value than there original
	value.

2011-03-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-info.lisp (show-config-variable): Use the new
	defconfig method.

	* src/clfswm-autodoc.lisp (produce-configuration-variables): Use
	the new defconfig method.

	* src/clfswm-configuration.lisp (create-configuration-menu):
	Change the config system with a more lispy one and a less string
	based one: (defconfig name value group doc).


2011-03-06  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Simplify the
	selection method.